# mav-testbed

./: Cargo.toml  README.md
local-crates/embed_dir_macro/: Cargo.toml
local-crates/embed_dir_macro/src/: lib.rs
mavlink_xml/: common.xml  minimal.xml
src/: config.rs  main.rs  mav_conn.rs  mav_mapper.rs  mavlink.rs  testbed.rs  ui.rs
