[package]
name = "mav-testbed"
version = "0.1.0"
edition = "2021"
description = "MAVLink通信测试工具"

[[bin]]
path = "src/main.rs"
name = "mav-testbed"

[dependencies]
# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = "0.29"

# MAVLink
mavlink = { version = "0.14", features = ["tokio-1", "common", "emit-extensions", "std"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-serial = "5"

# Channels
crossbeam-channel = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# XML parsing
quick-xml = "0.38"

# Utilities
parking_lot = "0.12"
once_cell = "1.21"
socket2 = { version = "0.6", features = ["all"] }
if-addrs = "0.14"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rfd = "0.15"
embed_dir = { path = "local-crates/embed_dir_macro" }
serialport = "4.7.3"
libc = "0.2.180"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[profile.release]
opt-level = 3
lto = true
